<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/edit_settings"
        android:title="@string/edit_settings"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="always"/>

    <item android:id="@+id/share_button"
        android:title="Share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="always"/>

    <item android:id="@+id/settings_button"
        android:title="@string/text_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always"/>

    <item android:id="@+id/cancel_team_changes"
        android:title="@string/cancel_changes"
        android:icon="@drawable/ic_action_cancel"
        android:showAsAction="always"
        android:visible="false"/>

    <item android:id="@+id/save_team_changes"
        android:title="@string/save_changes"
        android:icon="@drawable/ic_action_accept"
        android:showAsAction="always"
        android:visible="false"/>
</menu>
