<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/background_light"
    android:padding="5sp"
    android:id="@+id/teamScrollView">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <ImageButton
                android:id="@+id/idea_image_view"
                android:layout_width="match_parent"
                android:layout_height="565dp"
                android:background="@android:color/white"
                android:src="@drawable/blueprint"
                android:scaleType="fitXY"
                android:padding="20dp"/>
            <ImageView
                android:id="@+id/idea_design_display"
                android:layout_width="match_parent"
                android:layout_height="565dp"
                android:src="@drawable/transparent_square"
                android:scaleType="fitXY"
                android:padding="20dp"/>
            <ProgressBar
                android:id="@+id/idea_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idea_name_title"
                android:textSize="40sp"
                android:layout_marginLeft="20sp"
                android:textColor="@color/header_color"/>
            <EditText
                android:id="@+id/idea_name_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="40sp"
                android:layout_marginLeft="10sp"
                android:textColor="@color/header_color"
                android:hint="@string/idea_name_hint"
                android:textColorHint="@color/hint_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type: "
                android:textSize="35sp"
                android:textColor="@color/header_color"
                android:layout_marginLeft="60sp"/>
            <Spinner
                android:id="@+id/idea_type_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:id="@+id/idea_motor_piston_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/gray"/>

       <LinearLayout
           android:id="@+id/idea_motor_piston_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Motors: "
                    android:textSize="40sp"
                    android:layout_marginLeft="20sp"
                    android:textColor="@color/header_color"/>
                <NumberPicker
                    android:id="@+id/idea_motors_number_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

           <LinearLayout
               android:id="@+id/idea_piston_layout"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Pistons: "
                   android:textSize="40sp"
                   android:layout_marginLeft="20sp"
                   android:textColor="@color/header_color"/>
               <NumberPicker
                   android:id="@+id/idea_pistons_number_picker"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>
           </LinearLayout>
       </LinearLayout>

        <View
            android:id="@+id/idea_power_speed_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/gray"/>
        <LinearLayout
            android:id="@+id/idea_power_speed_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/idea_power_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Power"
                    android:textSize="35sp"
                    android:textColor="@color/header_color"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"/>
                <SeekBar
                    android:id="@+id/idea_power_seekbar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idea_power_title"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:id="@+id/idea_dynamic_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textSize="35sp"
                    android:layout_alignRight="@id/idea_power_seekbar"
                    android:layout_alignBottom="@id/idea_power_title"
                    android:layout_marginLeft="-30dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/idea_speed_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Speed"
                    android:textSize="35sp"
                    android:textColor="@color/header_color"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"/>
                <SeekBar
                    android:id="@+id/idea_speed_seekbar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idea_speed_title"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:id="@+id/idea_dynamic_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textSize="35sp"
                    android:layout_alignRight="@id/idea_speed_seekbar"
                    android:layout_alignBottom="@id/idea_speed_title"
                    android:layout_marginLeft="-30dp"/>
            </RelativeLayout>
        </LinearLayout>

        <View
            android:id="@+id/idea_gear_ratio_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:id="@+id/idea_gear_ratio_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gear Ratio: "
                android:textSize="40sp"
                android:layout_marginLeft="20sp"
                android:textColor="@color/header_color"/>
            <NumberPicker
                android:id="@+id/idea_gear_ratio_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="50sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="50dp"/>
            <NumberPicker
                android:id="@+id/idea_gear_ratio_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            </LinearLayout>

        <View
            android:id="@+id/idea_route_score_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:id="@+id/idea_route_score_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Points Scored: "
                android:textSize="40sp"
                android:layout_marginLeft="20sp"
                android:textColor="@color/header_color"/>

            <EditText
                android:id="@+id/idea_route_score_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/header_color"
                android:maxLines="1"
                android:textSize="40sp"
                android:hint="@string/auton_score_hint"
                android:textColorHint="@color/hint_color"
                android:inputType="number"/>
            </LinearLayout>

        <TextView
            android:id="@+id/idea_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/delete_design"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@color/delete_button_color"
            android:enabled="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:textColor="@color/credits_color"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</ScrollView>